--- a/index.html
+++ b/index.html
@@ -7,22 +7,32 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="https://code.s3.yandex.net/web-code/favicon.ico"
-    />
+      href="https://code.s3.yandex.net/web-code/favicon.ico"/>
   </head>
   <body class="page">
     <header class="header">
       <div class="overlay">
-        <h1></h1>
+        <h1>Ray Lester</h1>
       </div>
     </header>
     <section class="content">
       <div>
-        <img class="image" src="" alt=""></img>
+        <p>I spent a majority of my life playing basketball. I saw my career go from stand out prep athlete, to earning a full ride scholarship to a division 1 university, to playing professionally in the UK and Germany.</p>
+        <class='image' src="images/ball.jpg" alt="Basketball"></class>  
+              
+        <p>I have a very close group of friends who I can rely on when I need them most. I am thankful for them even though we sometimes have our disagreements.</p>
+        <class='image src="images/friends.jpeg" alt="Friends"></class>
+
+        <p>I love my family more than anything in the world! They are my why and my reason for pursuing this career change, and I am laser focused on working hard to achieve this goal for not only myself but especially them!</p>
+        <class='image' src="images/family.jpeg" alt="Family"></class>
+
+        <p>I have always had a strong passion for computers and technology since my early years. I am very excited to get the proper structure for building a calculated foundation to continue to work towards becoming a full time employed software engineer.</p>
+        <class='image' src="images/web.jpeg" alt="Why Web Dev?"></class>
+
       </div>
     </section>
     <footer class="footer">
-      <!-- add your signature here -->
+      <p>TechRooski x Practicum</p>
     </footer>
   </body>
 </html>
